--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,26 @@
-babel==2.9.0
+Babel==2.9.0
+click==8.0.4
+decorator==5.1.1
+dnspython==2.2.0
+email-validator==1.1.3
+Flask==2.0.3
+Flask-Moment==0.11.0
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+greenlet==1.1.2
+idna==3.3
+infinity==1.5
+intervals==0.9.2
+itsdangerous==2.1.0
+Jinja2==3.0.3
+MarkupSafe==2.1.0
 python-dateutil==2.6.0
-flask-moment==0.11.0
-flask-wtf==0.14.3
-flask_sqlalchemy==2.4.4
+pytz==2021.3
+six==1.16.0
+SQLAlchemy==1.4.31
+SQLAlchemy-Utils==0.38.2
+validators==0.18.2
+Werkzeug==2.0.3
+WTForms==3.0.1
+WTForms-Alchemy==0.18.0
+WTForms-Components==0.10.5
