--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+alembic==1.7.6
 Babel==2.9.0
 click==8.0.4
 decorator==5.1.1
 dnspython==2.2.0
 email-validator==1.1.3
 Flask==2.0.3
+Flask-Migrate==3.1.0
 Flask-Moment==0.11.0
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
@@ -13,7 +15,10 @@ infinity==1.5
 intervals==0.9.2
 itsdangerous==2.1.0
 Jinja2==3.0.3
+Mako==1.1.6
 MarkupSafe==2.1.0
+phonenumbers==8.12.43
+psycopg2==2.9.3
 python-dateutil==2.6.0
 pytz==2021.3
 six==1.16.0
